Revert "Revert the patch that makes the EntityID unique."
This reverts commit 0d14eab26fadaec84f41cf3fb2f84f0a3e4a17aa.

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Patches\Monocle\SpriteBank.cs" />
     <Compile Include="Patches\MusicFadeTrigger.cs" />
     <Compile Include="Patches\IntroCrusher.cs" />
+    <Compile Include="Patches\LevelData.cs" />
     <Compile Include="Patches\Maddy3D.cs" />
     <Compile Include="Patches\ModeProperties.cs" />
     <Compile Include="Patches\MountainRenderer.cs" />
