--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Mod\Entities\TriggerSpikesOriginal.cs" />
     <Compile Include="Mod\Helpers\EndUserException.cs" />
     <Compile Include="Mod\Helpers\SafeRoutine.cs" />
+    <Compile Include="Mod\Registry\DecalRegistry.cs" />
     <Compile Include="Mod\Registry\IStrawberry.cs" />
     <Compile Include="Mod\Registry\IStrawberrySeeded.cs" />
     <Compile Include="Mod\Registry\StrawberryRegistry.cs" />
