Include libMonoPosixHelper.so with Everest (Thanks, @max4805!)
Fixes #34.

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -175,6 +175,10 @@
       <Link>libdiscord-rpc.so</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\lib-mono\libMonoPosixHelper.so">
+      <Link>libMonoPosixHelper.so</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="..\lib-mono\libMonoPosixHelper.dylib.dSYM\Contents\Info.plist">
       <Link>libMonoPosixHelper.dylib.dSYM\Contents\Info.plist</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
