Install .NET Core SDK in Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,13 @@ name: '$(Build.BuildId)+$(Build.BuildIdOffset)'
 
 steps:
 # Pre-build steps.
+- task: UseDotNet@2
+  displayName: 'Install .NET Core SDK 3.1.x'
+  inputs:
+    packageType: sdk
+# FIXME: Upgrade to 3.1.x once https://github.com/dotnet/sourcelink/issues/524 is fixed.
+# Example failing build with 3.1.200: https://dev.azure.com/MonoMod/MonoMod/_build/results?buildId=142&view=results
+    version: '3.1.102'
 - task: NuGetCommand@2
   displayName: 'Restore NuGet packages'
   inputs:
