Add documentation for TextMenus
Add more logic when merging documentation

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -217,7 +217,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Celeste.xml">
+    <None Include="../lib-stripped/Celeste.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
