Add FNA documentation file.
Add convenience constructor to DashListener
Prevent crash in MiniInstaller on missing xml files
Merge Ext class documentation with patch_ classes
More documentation

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -216,6 +216,9 @@
     <None Include="../lib-stripped/Celeste.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="../lib-stripped/FNA.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
 </Project>
