macOS 1.3.3.0 separates the .exe from the launcher

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -190,8 +190,12 @@
       <Link>libmono-btls-shared.so</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\lib-mono\libMonoPosixHelper.dylib.dSYM\Contents\Resources\DWARF\libMonoPosixHelper.dylib">
+    <Content Include="..\lib-mono\libMonoPosixHelper.dylib">
       <Link>libMonoPosixHelper.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\lib-mono\libmono-btls-shared.dylib">
+      <Link>libmono-btls-shared.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="$(NuGetPackageRoot)\keralua\1.0.22\runtimes\linux-x64\native\liblua53.so">
