Get Everest to build with Celeste 1.3.3.14

--- a/.editorconfig
+++ b/.editorconfig
@@ -70,4 +70,4 @@ dotnet_style_qualification_for_method = false:warning
 dotnet_style_qualification_for_property = false:warning
 
 # CS1591: Missing XML comment for publicly visible type or member
-dotnet_diagnostic.CS1591.severity = suggestion
+dotnet_diagnostic.CS1591.severity = none
