--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -58,6 +58,7 @@
     <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="21.03.01.01" />
     <PackageReference Include="MonoMod.Utils" Version="21.03.01.01" />
     <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="YamlDotNet" Version="8.1.2" />
     <PackageReference Include="Jdenticon-net" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
