Exclude GIMP .xcf files

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -76,6 +76,7 @@
     </EmbeddedResource>
     <EmbeddedResource Remove="Content\Dialog\Fonts\chinese-noto.bmfc" />
     <EmbeddedResource Remove="Content\Dialog\Fonts\chinese_additional_characters.txt" />
+    <EmbeddedResource Remove="Content\**\*.xcf" />
   </ItemGroup>
 
   <ItemGroup>
