Move azure build host from windows to ubuntu

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
 variables:
   solution: '**/*.sln'
@@ -79,7 +79,7 @@ steps:
 
 # Announce new stable versions on Discord (#modding_updates).
 - script: |
-    set /a "BUILD_NUMBER=$(Build.BuildId)+$(Build.BuildIdOffset)"
-    curl -H "Content-Type: application/json" -d "{\"content\": \"**A new Everest stable was just released!**\nThe latest stable version is now **%BUILD_NUMBER%**.\"}" $(WEBHOOK_URL)
+    declare -i BUILD_NUMBER=$(Build.BuildId)+$(Build.BuildIdOffset)
+    curl -H "Content-Type: application/json" -d "{\"content\": \"**A new Everest stable was just released!**\nThe latest stable version is now **$BUILD_NUMBER**.\"}" $(WEBHOOK_URL)
   displayName: 'Celeste Discord webhook'
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/stable'))
