Allow verify step to run for all builds

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ steps:
     path: $(VANILLA_CACHE)
     cacheHitVar: CACHE_RESTORED
 - task: PowerShell@2
-  condition: and(succeeded(), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI'))
+  condition: succeeded()
   displayName: 'Verify patches'
   inputs:
     filePath: 'azure-pipelines-verify.ps1'
