--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -25,7 +25,7 @@ steps:
 
 # Define build_number variable and zip build artifacts
 - script: |
-    declare -i BUILD_NUMBER=$(Build.BuildId)+$(Build.BuildIdOffset)
+    declare -i BUILD_NUMBER=$(RESOURCES_PIPELINE_build_RUNID)+$(Build.BuildIdOffset)
     echo "##vso[task.setvariable variable=build_number]$BUILD_NUMBER"
 
     zip -9r $(Build.ArtifactStagingDirectory)/main.zip $(Build.ArtifactStagingDirectory)/main/
