--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -25,8 +25,7 @@ steps:
 
 # Define build_number variable and zip build artifacts
 - script: |
-    # TODO: -1 hackfix to match triggering build, should be replaced with actual reference
-    declare -i BUILD_NUMBER=$(Build.BuildId)+$(Build.BuildIdOffset)-1
+    declare -i BUILD_NUMBER=$(resources.pipeline.build.runID)+$(Build.BuildIdOffset)
     echo "##vso[task.setvariable variable=build_number]$BUILD_NUMBER"
 
     zip -9r $(Build.ArtifactStagingDirectory)/main.zip $(Build.ArtifactStagingDirectory)/main/
