--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -1,3 +1,6 @@
+variables:
+- group: 'Common Variables'
+
 # Trigger for main repo branches, and non-draft PRs
 trigger:
   branches:
@@ -12,7 +15,7 @@ pr:
   drafts: false
 
 
-name: '$(Build.BuildId)+$(Build.BuildIdOffset)'
+name: '$(Build.BuildId)+$(BuildIdOffset)'
 
 
 stages:
